<?xml version="1.0"?>
<package>
  <name>provider_actuators</name>
  <version>1.0.0</version>
  <description>
    The provider_actuators is responsible to communicate with IO board.
  </description>


  <author>Marc-Antoine Couture</author>

  <maintainer email="coumarc9@outlook.com">Marc-Antoine Couture</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>interface_rs485</build_depend>
    <build_depend>sonia_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>interface_rs485</run_depend>
    <run_depend>sonia_msgs</run_depend>

</package>
